--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@babel/preset-env": "^7.0.0",
     "babel-loader": "^8.0.6",
     "bower": "^1.8.2",
+    "clean-webpack-plugin": "^0.1.19",
     "eslint": "^4.9.0",
     "http-server": "^0.10.0",
     "jasmine-core": "^2.8.0",
